--- a/client/views/common/menu.html
+++ b/client/views/common/menu.html
@@ -29,7 +29,7 @@
         <ul class="ui divided very relaxed list">
           <li class="item">
             <h4>
-              <a href="#">Ruby Blanc</a>
+              <a href="{{pathFor 'case'}}">Ruby Blanc</a>
             </h4>
           </li>
         </ul>
