--- a/client/views/home/footer/footer.html
+++ b/client/views/home/footer/footer.html
@@ -6,6 +6,8 @@
         Looks like a business in {{location}}<br/>needs our attention! Is this you?
       </small>
     </h1>
-    {{> footerWizard}}
+    <div class="ui action input">
+      {{> MailChimpListSubscribe}}
+    </div>
   </footer>
 </template>
