--- a/client/views/notFound/notFound.html
+++ b/client/views/notFound/notFound.html
@@ -1,6 +1,6 @@
 <template name="notFound">
     <p>
         Seems like this site doesn't exist<br />
-        <a href="/">Go to home</a>
+        <a href="{{pathFor 'home'}}">Go to home</a>
     </p>
 </template>
