added markup for case view, updated cases fixtures, restructured images folder

--- a/client/stylesheets/home.less
+++ b/client/stylesheets/home.less
@@ -484,7 +484,7 @@
           padding: 0 !important;
 
           .background.image {
-            background: url(/images/backgrounds/jupiter.png);
+            background: url(@homeBackgroundJupiter);
             background-size: inherit;
             background-position: 15% 65%;
             background-repeat: no-repeat;
@@ -516,7 +516,7 @@
           padding: 0 !important;
 
           .background.image {
-            background: url(/images/backgrounds/saturn.png);
+            background: url(@homeBackgroundSaturn);
             background-size: inherit;
             background-position: 45% 75%;
             background-repeat: no-repeat;
