--- a/client/stylesheets/variables.less
+++ b/client/stylesheets/variables.less
@@ -1,8 +1,9 @@
 // Declare variables for use in all the template specific / main less files
 
+// Typography
 @primaryLinkHoverColor: #682d71;
 @secondaryLinkHoverColor: #bd6ddb;
-@primaryFontColor: #09050D;
+@primaryFontColor: #3f324d;
 @secondaryFontColor: #fff;
 @secondaryFontColorVariation: #DDDDDD;
 @primaryHeaderColor: #ff995e;
@@ -10,10 +11,14 @@
 @highlightFontColor: #3fb094;
 @primaryIconColor: #ff995e;
 
-@voidBackground: #09050D;
+// Backgrounds
+@voidBackground: #3f324d;
 @contentBackground: #fff;
 @menuBackground: #ff995e;
 @labelBackground: #feeb7f;
+
+@homeBackgroundJupiter: '/images/home/backgrounds/jupiter.png';
+@homeBackgroundSaturn: '/images/home/backgrounds/saturn.png';
 
 // Width variables
 @largeDesktopWidth: 1280px;
