updated images for case study view, started to add styles for case study view

--- a/client/views/cases/case_section.html
+++ b/client/views/cases/case_section.html
@@ -13,6 +13,15 @@
             <img src="{{path}}" />
           </div>
         {{/each}}
+        {{#each lists}}
+          <div class="ui list">
+            <ul>
+              {{#each list}}
+                <li>{{item}}</li>
+              {{/each}}
+            </ul>
+          </div>
+        {{/each}}
       {{/each}}
     </div>
   </section>
