--- a/client/stylesheets/case.less
+++ b/client/stylesheets/case.less
@@ -4,17 +4,34 @@
 .layout {
 
   .case.view {
+    padding: 3em 0;
     overflow: hidden;
 
     .header-wrapper {
       position: absolute;
+      top: 0;
+      left: 0;
+      overflow: hidden;
       margin: 0 auto;
       padding: 0;
       height: 100vh;
       width: 100%;
+      background-size: cover !important;
+      background-position: 50% 50% !important;
+      background-repeat: no-repeat;
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
+
+      .logo {
+        margin: 20vh auto 5vh;
+      }
 
       .huge.ui.header {
-        padding: 1em;
+        margin: 0;
+        padding: 5vh 1em;
+        color: @primaryFontColor;
+        font-size: 2em;
+        text-transform: none;
       }
     }
 
@@ -26,6 +43,51 @@
 
       .case-section {
 
+        .column {
+          padding: 0;
+
+          .ui.header {
+            margin: 4%;
+            text-align: center;
+          }
+
+          .ui.text {
+            margin: 0 4%;
+          }
+
+          .ui.huge.image {
+            width: 100%;
+            margin: 0;
+
+            img {
+              width: 100%;
+              margin: 0 auto;
+            }
+          }
+
+          .ui.list {
+            margin: 4%;
+
+            ul {
+              padding-left: 2em;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .case.view.effect-push {
+
+    &:not(.notrans) {
+
+      .header-weapper,
+      .huge.ui.header,
+      .case-main > .case-section {
+        -webkit-transition-property: opacity, -webkit-transform;
+        transition-property: opacity, transform;
+        -webkit-transition-duration: 1s;
+        transition-duration: 1s;
       }
     }
   }
