--- a/client/views/cases/case.html
+++ b/client/views/cases/case.html
@@ -1,15 +1,15 @@
 <template name="case">
-  <div class="case view">
-    <header class="center aligned header-wrapper">
-      <img src="{{logo}}" />
+  <div class="case view {{animation}}">
+    <header class="center aligned header-wrapper" style="background: url({{jumbo}});">
+      <img class="logo" src="{{logo}}" />
       <h1 class="huge center aligned ui header">
         {{title}}
       </h1>
     </header>
-    <main class="ui stackable case-main grid">
+    <article class="ui stackable case-main grid">
       {{#each sections}}
         {{> caseSection}}
       {{/each}}
-    </main>
+    </article>
   </div>
 </template>
