--- a/client/stylesheets/variables.less
+++ b/client/stylesheets/variables.less
@@ -19,7 +19,7 @@
 
 @homeBackgroundJupiter: '/images/home/backgrounds/jupiter.png';
 @homeBackgroundSaturn: '/images/home/backgrounds/saturn.png';
-
+@caseBackgroundAstronaut: '/images/cases/backgrounds/astronaut.png';
 // Width variables
 @largeDesktopWidth: 1280px;
 @mediumDesktopWidth: 992px;
