--- a/client/views/home/footer/footer.html
+++ b/client/views/home/footer/footer.html
@@ -1,5 +1,5 @@
 <template name="footer">
-  <footer class="center aligned {{isActive}} footer">
+  <footer class="center aligned footer">
     <h1 class="huge center aligned ui header">
       Do you want more traffic?
       <small>
