--- a/client/stylesheets/footer.less
+++ b/client/stylesheets/footer.less
@@ -103,13 +103,19 @@
 
   @media (max-width: @phoneWidth) {
     .huge.ui.header {
-      font-size: 1.5em;
+      font-size: 1.2em;
     }
 
     .ui.action.input {
 
+      .message,
+      input {
+        font-size: 0.8em;
+      }
+
       button {
-        padding: 5px;
+        padding: 3px 8px;
+        font-size: 0.8em;
       }
     }
   }
