--- a/client/views/home/header/header.html
+++ b/client/views/home/header/header.html
@@ -1,8 +1,8 @@
 <template name="header">
   <header class="center aligned header-wrapper">
-    <h1 class="huge center aligned ui header">
+    <h1 class="huge center aligned animated fadeInDown ui header">
       {{constant 'name'}}
-      <small>
+      <small class="animated fadeInUp">
         Building meaningful software, together.
       </small>
     </h1>
