--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -1,5 +1,5 @@
 <template name="home">
-  <div class="home view">
+  <div class="animated fadeIn home view">
     {{> header}}
     <main class="ui stackable home-main grid">
       {{#each sections}}
