--- a/client/stylesheets/layout.less
+++ b/client/stylesheets/layout.less
@@ -11,6 +11,7 @@ body, .layout {
   margin: 0 auto;
   padding: 0;
   overflow-x: hidden;
+  background: @voidBackground;
   color: @primaryFontColor;
   font-family: 'Montserrat', sans-serif;
 }
